--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ flask
 pandas
 gunicorn
 spacy==3.0.0
-click
+click>=8.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
